Typos, cleanup and docs++

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Vue List - POC</title>
+    <title>Vue Game List - POC</title>
     <!-- Preconnect, preload and swap in Google font for faster load time -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Macondo&family=Open+Sans:wght@400;600&display=swap" />
